examples/errors/invalid_syntax.eventmodel
Title: Invalid Syntax

Swimlane: System
- NotAnEntityType: Something
- Event ShouldHaveColon